--- a/main.html
+++ b/main.html
@@ -8,6 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test="shoppingList"></li>
+	</ol>
+	<ul>
+		<li data-ns-test="holidayList"></li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
