--- a/main.html
+++ b/main.html
@@ -9,10 +9,15 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<ol>
-		<li data-ns-test="shoppingList"></li>
+		
+		<li data-ns-test="holidayList">Phone</li>
+		<li data-ns-test="holidayList">Home</li>
+		<li data-ns-test="holidayList">Car</li>
 	</ol>
 	<ul>
-		<li data-ns-test="holidayList"></li>
+		<li data-ns-test="shoppingList">Ujjain</li>
+		<li data-ns-test="shoppingList">kedrnath</li>
+		<li data-ns-test="shoppingList">Vasnu Devi</li>
 	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
